--- a/www.csgoscrim.net/index.html
+++ b/www.csgoscrim.net/index.html
@@ -15,6 +15,8 @@
 <body>
 
 
+
+
 <div class="button_overlay">
 <form value='input' action='http://www.csgoscrim.net/login.php' method='post'><input type='submit' value='Login'></form>
 10/40/33pm<font></font>
@@ -22,11 +24,17 @@
 <font></font>
 <a href="https://steamcommunity.com/id/saviiyo">[ADMIN]</a>
 <form value="input" action="http://www.csgoscrim.net/connect.php" method="post">
+	<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 <select name="skillLevel" size="1">
 	<option>Low</option>
 			<option>Mid</option>
 			<option>High</option>
-			<option>Topteam</option>	
+			<option>Topteam</option>
 </select>
 
 <select name="map">
@@ -64,7 +72,7 @@
 </div>
 
 
-<table class='sortable'><tr> 
+<table class='sortable'><tr>
 <th>Teamname</th>
 <th>SkillLevel</th>
 <th>Map</th>
