Added Bootstrap 3 files
Inserted script into index as well.

--- a/www.csgoscrim.net/index.html
+++ b/www.csgoscrim.net/index.html
@@ -12,6 +12,8 @@
 
 </head>
 
+<link href="css/bootstrap.min.css" rel="stylesheet"
+
 <body>
 
 
@@ -26,7 +28,7 @@
 	<option>Low</option>
 			<option>Mid</option>
 			<option>High</option>
-			<option>Topteam</option>	
+			<option>Topteam</option>
 </select>
 
 <select name="map">
@@ -64,7 +66,7 @@
 </div>
 
 
-<table class='sortable'><tr> 
+<table class='sortable'><tr>
 <th>Teamname</th>
 <th>SkillLevel</th>
 <th>Map</th>
@@ -83,6 +85,9 @@ window.location = joinIP;
 }
 
 </script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 
