--- a/www.csgoscrim.net/index.html
+++ b/www.csgoscrim.net/index.html
@@ -16,6 +16,22 @@
 
 <body>
 
+	<nav class="navbar navbar-inverse">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<button type="button" class="btn btn-default navbar-btn">Sign in</button>
+					<span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">
+					<img src="scrimdatabaselogo_csgo.png" style="max-width:200px; margin-top:-35px">
+				</a>
+	    </div>
+
+	</nav>
 
 <div class="button_overlay">
 <form value='input' action='http://www.csgoscrim.net/login.php' method='post'><input type='submit' value='Login'></form>
