--- a/www.csgoscrim.net/index.html
+++ b/www.csgoscrim.net/index.html
@@ -20,17 +20,20 @@
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<button type="button" class="btn btn-default navbar-btn">Sign in</button>
+
 					<span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">
+	      <a class="navbar-brand" href="index.png">
 					<img src="scrimdatabaselogo_csgo.png" style="max-width:200px; margin-top:-35px">
 				</a>
 	    </div>
-
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav">
+			        <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+							<li><a href="help.html">Help<span class="sr-only">(current)</span></a></li>
 	</nav>
 
 <div class="button_overlay">
