Added NavBar to help.html
Changed the active class only to the active page;
Removed " - - - " in the help.html page.

--- a/www.csgoscrim.net/help.html
+++ b/www.csgoscrim.net/help.html
@@ -4,14 +4,39 @@
 <!-- Mirrored from www.csgoscrim.net/help.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Jan 2017 21:40:34 GMT -->
 <head>
 <link rel="stylesheet" href="style.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-[CSGOScrim.net HELP]
+  <font color="white">
+  <nav class="navbar navbar-inverse">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+					<span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="index.png">
+					<img src="scrimdatabaselogo_csgo.png" style="max-width:200px; margin-top:-35px">
+				</a>
+	    </div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav">
+			        <li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+							<li><a href="index.html">News<span class="sr-only">(current)</span></a></li>
+							<li><a href="https://steamcommunity.com/id/saviiyo">Admin<span class="sr-only">(current)</span></a></li>
+							<li><a href=#>FAQ<span class="sr-only">(current)</span></a></li>
+							<li class="active"><a href="help.html">Help<span class="sr-only">(current)</span></a></li>
+	</nav>
+<h2>CSGOScrim.net HELP</h2>
 <br>
 --------------------------------------------
 <br>
 <br>
-1. [STEAMID] 
+
+&nbsp;1. [STEAMID]
 <br>
 --------------------------------------------
 <br>
@@ -19,31 +44,37 @@ Please only type in the [ID] not the full link.
 <br>
 [steamcommunity.com/id/saviiyo/] -> [saviiyo]
 <br>
---------------------------------------------
+
 <br>
-2. [IP] 
+
+&nbsp;2. [IP]
 <br>
---------------------------------------------
+
 <br>
 Please only type in a real [IP] else you could be perma banned very fast.
 <br>
---------------------------------------------
+
 <br>
-3. [Spamm] 
+
+&nbsp;3. [Spamm]
 <br>
---------------------------------------------
+
 <br>
 You can get banned for spam connecting.
 <br>
---------------------------------------------
+
 <br>
-4. [Update] 
+
+&nbsp;4. [Update]
 <br>
---------------------------------------------
+
 <br>
 You can only have 1 post. It will update itself if you put in a new one.
 <br>
---------------------------------------------
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+</font>
 </body>
 
 <!-- Mirrored from www.csgoscrim.net/help.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Jan 2017 21:40:34 GMT -->
