--- a/www.csgoscrim.net/index.html
+++ b/www.csgoscrim.net/index.html
@@ -33,6 +33,9 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav">
 			        <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+							<li><a href="index.html">News<span class="sr-only">(current)</span></a></li>
+							<li><a href="https://steamcommunity.com/id/saviiyo">Admin<span class="sr-only">(current)</span></a></li>
+							<li><a href=#>FAQ<span class="sr-only">(current)</span></a></li>
 							<li><a href="help.html">Help<span class="sr-only">(current)</span></a></li>
 	</nav>
 
